# domain-modeling-with-haskell-data-structures-oredev

./: Makefile  README.md
docs/: index.html
src/: header.html  slides.md  theme.css
src/listings/data-structures/src/: Demo.hs  Reporting.hs
src/listings/foldable-traversable/src/: Demo.hs  PrettyPrint.hs  Reporting.hs
src/listings/intro/: brittany.yaml  intro.cabal  stack.yaml
src/listings/intro/src/: Functor.hs  IOFunctor.hs  Intro.hs
src/listings/writert/src/: Demo.hs  Reporting.hs
