name:           intro
version:        0.1.0.0
description:    Code in introduction of talk
author:         Oskar Wickström
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , containers
    , text
  exposed-modules:
      Intro
    , Functor
    , IOFunctor
  default-language: Haskell2010
